# langchain-e2b-coding-agent

./: .env.example  .gitignore  AGENTS.md  README.md  agent_display.py  coding_agent.py  opencode.json  pyproject.toml  skills-lock.json  subagents.yaml
projects/calc/: test_calculator.py
projects/hn-pipeline/: README.md  requirements.txt
projects/hn-pipeline/app/: api.py  database.py  pipeline.py  scraper.py  summarizer.py
projects/hn-pipeline/data/: hn_stories.db
projects/pipeline/: README.md  requirements.txt
projects/pipeline/app/: database.py  main.py  models.py
projects/pipeline/app/routers/: stories.py
projects/pipeline/app/services/: hn_client.py  llm_client.py  pipeline.py
projects/pipeline/data/: stories.db
projects/weather-cli/: pyproject.toml
projects/weather-cli/tests/: test_weather_cli.py
projects/weather-cli/weather_cli/: __init__.py  main.py
skills/code-review/: SKILL.md  lint_check.py
