[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.12",
    "e2b>=2.30.0",
    "langchain-community>=0.4.2",
    "langchain-e2b>=0.0.5",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.5",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]
